# pytest-httpx2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  flake.nix  pyproject.toml
pytest_httpx2/: __init__.py  __version__.py  _plugin.py
tests/: test_plugin.py
